minikube/authentication-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication-service
  labels:
    app: authentication-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentication-service
  template:
    metadata:
      labels:
        app: authentication-service
    spec:
      containers:
        - name: authentication-service
          image: hassanhbahmed/authentication-service:latest  # Replace with your actual image
          ports:
            - containerPort: 7000
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: authentication-service
spec:
  selector:
    app: authentication-service
  ports:
    - protocol: TCP
      port: 7000
      targetPort: 7000
      nodePort: 30003
  type: NodePort
