minikube/common.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: common-data-service
  labels:
    app: common-data-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: common-data-service
  template:
    metadata:
      labels:
        app: common-data-service
    spec:
      containers:
        - name: common-data-service
          image: hassanhbahmed/common-data-service:latest
          ports:
            - containerPort: 9000
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: common-data-service
spec:
  selector:
    app: common-data-service
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
      nodePort: 30002
  type: NodePort
