minikube/reactui-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-ui
spec:
  selector:
    matchLabels:
      app: react-ui
  replicas: 1
  template:
    metadata:
      labels:
        app: react-ui
    spec:
      containers:
        - name: react-ui
          image: hassanhbahmed/react-ui:1 # Replace with actual image
          stdin: true
          tty: true
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: react-ui
spec:
  selector:
    app: react-ui
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30000
  type: NodePort
