minikube/search.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-suggestion-service
  labels:
    app: search-suggestion-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search-suggestion-service
  template:
    metadata:
      labels:
        app: search-suggestion-service
    spec:
      containers:
        - name: search-suggestion-service
          image: hassanhbahmed/search-suggestion-service:latest
          ports:
            - containerPort: 10000
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: search-suggestion-service
spec:
  selector:
    app: search-suggestion-service
  ports:
    - protocol: TCP
      port: 10000
      targetPort: 10000
      nodePort: 30004
  type: NodePort
