minikube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-ui-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: 18.207.207.250
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-ui-service
                port:
                  number: 3000
